# pctx

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  Cargo.toml  Makefile  README.md  REFACTOR_PLAN.md  REFACTOR_PROGRESS.md  RELEASING.md  dist-workspace.toml  release.sh  test_agent_dev.py
crates/code_mode_py_bindings/: Cargo.toml  README.md  pyproject.toml
crates/code_mode_py_bindings/python/pctx_code_mode/: __init__.py
crates/code_mode_py_bindings/src/: code_mode_py.rs  lib.rs  types.rs
crates/code_mode_py_bindings/tests/: conftest.py  test_code_mode.py
crates/codegen/: Cargo.toml
crates/codegen/src/: lib.rs  schema_type.rs  tools.rs  utils.rs
crates/codegen/src/typegen/: mod.rs  schema_data.rs
crates/codegen/tests/: typegen.rs
crates/codegen/tests/snapshots/: typegen__test_additional_properties.ts.snap  typegen__test_any.ts.snap  typegen__test_enum.ts.snap
crates/deno_executor/: Cargo.toml
crates/deno_executor/js/: setup.js
crates/deno_executor/src/: deno_execute.rs  lib.rs  python_ops.rs  ts_go_check.rs
crates/deno_executor/src/tests/: default_export_capture.rs  diagnostic_filtering.rs  local_tools.rs  mcp_client_usage.rs  mod.rs  output_capture.rs  permissions.rs  runtime_execution.rs  type_checking.rs
crates/pctx/: Cargo.toml
crates/pctx/src/: cli.rs  lib.rs
crates/pctx/src/commands/: add.rs  dev.rs  init.rs  list.rs  mcp_list.rs  mcp_remove.rs  mod.rs  remove.rs  start.rs
crates/pctx/src/config/: auth.rs  mod.rs  server.rs
crates/pctx/src/mcp/: auth.rs  client.rs  mod.rs  server.rs  service.rs  tools.rs  upstream.rs
crates/pctx/src/utils/: ascii-logo.txt  jsonl_logger.rs  keyring.rs  logger.rs  metrics.rs  mod.rs  prompts.rs  spinner.rs  styles.rs  (+1 more)
crates/pctx_agent_server/: Cargo.toml  openapi.json
crates/pctx_agent_server/src/: extractors.rs  lib.rs  model.rs  routes.rs  server.rs  session.rs  types.rs
crates/pctx_agent_server/tests/: executions.rs  integration_test.rs  registrations.rs  rest_api_test.rs  utils.rs  websocket_test.rs  websockets.rs
crates/pctx_code_execution_runtime/: CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/pctx_code_execution_runtime/examples/: typescript_sdk_with_dependencies.rs
crates/pctx_code_execution_runtime/src/: callable_tool_registry.rs  callback_ops.rs  callback_registry.rs  error.rs  js_local_tool_ops.rs  js_local_tool_registry.rs  lib.rs  local_tool_ops.rs  local_tool_registry.rs  mcp_ops.rs  mcp_registry.rs  runtime.d.ts  runtime.js
crates/pctx_code_mode/: CHANGELOG.md  Cargo.toml  README.md
crates/pctx_code_mode/src/: code_mode.rs  lib.rs  model.rs  parallel_registration.rs  tests.rs
crates/pctx_code_mode/tests/: mcp_build.rs
crates/pctx_codegen/: CHANGELOG.md  Cargo.toml
crates/pctx_codegen/src/: case.rs  utils.rs
crates/pctx_codegen/tests/: typegen.rs
crates/pctx_config/: CHANGELOG.md  Cargo.toml
crates/pctx_config/src/: auth.rs  callback.rs  defaults.rs  lib.rs  logger.rs  server.rs  telemetry.rs
crates/pctx_core/: Cargo.toml
crates/pctx_core/src/: code_mode.rs  lib.rs  model.rs  test_utils.rs  tests.rs  tools.rs
crates/pctx_deno_transpiler/: CHANGELOG.md  Cargo.toml
crates/pctx_deno_transpiler/src/: lib.rs
crates/pctx_executor/: CHANGELOG.md  Cargo.toml
crates/pctx_executor/src/: lib.rs
crates/pctx_mcp_server/: Cargo.toml
crates/pctx_mcp_server/src/: extractors.rs  lib.rs  mod.rs  server.rs  service.rs  service_tests.rs
crates/pctx_nodejs_sdk/: Cargo.toml  README.md  package.json
crates/pctx_nodejs_sdk/src/: lib.rs
crates/pctx_python_runtime/: Cargo.toml
crates/pctx_python_runtime/src/: lib.rs  tests.rs
crates/pctx_python_sdk/: Cargo.toml  README.md  pyproject.toml
crates/pctx_python_sdk/src/: lib.rs
crates/pctx_session_server/: Cargo.toml  openapi.json
crates/pctx_session_server/src/: extractors.rs  lib.rs  model.rs  routes.rs  server.rs
crates/pctx_session_server/tests/: executions.rs  registrations.rs  utils.rs  websockets.rs
crates/pctx_session_types/: Cargo.toml
crates/pctx_session_types/src/: lib.rs
crates/pctx_type_check_runtime/: CHANGELOG.md  Cargo.toml  build.rs
crates/pctx_type_check_runtime/src/: ignored_codes.rs  lib.rs  type_check_runtime.js  type_check_runtime_generated.js
crates/pctx_websocket_server/: Cargo.toml
crates/pctx_websocket_server/src/: handler.rs  lib.rs  protocol.rs  session.rs
crates/pctx_websocket_server/tests/: code_execution_tests.rs  connection_tests.rs  tool_execution_tests.rs  tool_registration_tests.rs
crates/ptx/: Cargo.toml
crates/ptx/src/: cli.rs  main.rs
crates/sdk_runner/: Cargo.toml  build.rs
crates/sdk_runner/js/: mcp-client.min.mjs
crates/sdk_runner/src/: deno_execute.rs  lib.rs  tests.rs  ts_go_check.rs
pctx-py/: README.md  pyproject.toml  ruff.toml  test_agent_dev.py
pctx-py/docs/: api.rst  conf.py  index.rst  requirements.txt
pctx-py/src/pctx/: __init__.py  _client.py  _convert.py  _websocket_client.py  models.py
pctx-py/src/pctx_client/: __init__.py  _client.py  _tool.py  _utils.py  _websocket_client.py  models.py
pctx-py/tests/: conftest.py  langchain_code_mode.py  test_create_input_schema.py  test_create_model.py  test_integration.py  test_output_schema.py  test_server_config.py  test_tool_converters.py  test_tool_decorator.py  test_tool_descriptions.py
pctx-py/tests/client/: __init__.py  conftest.py  test_mcp_client.py  test_mcp_registration.py  test_pctx_client.py
pctx-py/tests/scripts/: crewai_code_mode.py  google_adk_code_mode.py  langchain_code_mode.py  manual_code_mode.py  openai_agents_code_mode.py  pydantic_ai_code_mode.py  start_test_mcp_servers.sh  test_http_mcp_server.py  test_mcp_server.py
pctx-py/tests/tools/: test_create_input_schema.py  test_output_schema.py  test_tool_decorator.py
python-client/: README.md  README.md.old  pyproject.toml  run_tests.sh
python-client/pctx_client/: __init__.py  client.py  mcp_client.py  namespace_proxy.py  unified_client.py  websocket_client.py
python-client/tests/: conftest.py  test_client.py  test_mcp_client.py  test_mcp_registration.py  test_pctx_client.py  test_unified_client.py
(+150 files in other folders)
