[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = "2024"
rust-version = "1.89"
license = "MIT"
repository = "https://github.com/portofcontext/pctx"

[workspace.dependencies]
tracing = "0.1.41"
thiserror = "2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = "1.41"
rmcp = "0.10.0"
axum = "0.8.7"
utoipa = "5.3"

[workspace.lints.rust]
unreachable_pub = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
match_same_arms = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
similar_names = "allow"
too_many_lines = "allow"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# [profile.dev.package."*"]
# opt-level = 3
# debug = true
