[project]
name = "pctx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Elias Posen", email = "elias@posen.ch" }]
requires-python = ">=3.13"
dependencies = ["httpx>=0.28.1", "pydantic>=2.7.2", "websockets>=15.0.1"]

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.14.7",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ipython>=8.26",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
