[package]
name = "code_mode_py_bindings"
version = "0.1.0"
edition = "2024"
license = "MIT"
publish = false

[lib]
name = "pctx_code_mode"
crate-type = ["cdylib"]

[dependencies]
# local
pctx_code_mode = { path = "../pctx_code_mode" }
pctx_config = { path = "../pctx_config" }
pctx_code_execution_runtime = { path = "../pctx_code_execution_runtime" }

# pyo3
pyo3 = { version = "0.23", features = ["extension-module"] }
pyo3-async-runtimes = { version = "0.23", features = ["tokio-runtime"] }

# async runtime
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

# general
thiserror = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
pythonize = "0.23"
url = "2.5"

[dev-dependencies]