[package]
name = "deno_executor"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
license = "MIT"
publish = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
deno_runtime = { version = "0.229.0", features = ["transpile", "hmr"] }
deno_resolver = "0.52.0"
node_resolver = "0.59.0"
sys_traits = "0.1"
deno_transpiler = { path = "../deno_transpiler" }
pctx_code_execution_runtime = { path = "../pctx_code_execution_runtime" }
pctx_type_check_runtime = { path = "../pctx_type_check_runtime" }
pctx_config = { path = "../pctx_config" }
tempfile = "3.14"
regex = "1.11"
thiserror = { workspace = true }
tracing = { workspace = true }
futures = "0.3"
# Force bundled SQLite to avoid bindgen/libclang issues in CI
# This forces all transitive dependencies (deno_runtime -> deno_kv -> rusqlite)
# to use the bundled feature which doesn't require libclang
# Must match the version used by deno_runtime (0.34.0) to avoid conflicts
rusqlite = { version = "=0.34.0", features = ["bundled"] }

[target.'cfg(windows)'.dependencies]
# Need version 0.59 to match deno_subprocess_windows transitive dependency
# and ensure the feature is enabled for it as well
windows-sys = { version = "0.59", features = [
    "Win32_System_SystemInformation",
] }

[dev-dependencies]
rustls = { version = "0.23", default-features = false, features = [
    "aws-lc-rs",
] }
tokio = { version = "1.41", features = ["rt", "macros"] }
serial_test = "3.0"
url = "2.5"

[lints]
workspace = true
