[package]
name = "pctx"
version = "0.2.1"
edition = "2024"
rust-version = "1.89"
license = "MIT"
repository = "https://github.com/portofcontext/pctx"
homepage = "https://portofcontext.com"
description = "Open source framework to connect AI agents to tools and services with code mode"
keywords = ["mcp", "ai", "agents", "code-mode", "model-context-protocol"]
categories = ["command-line-utilities", "development-tools", "mcp"]
readme = "../../README.md"
default-run = "pctx"

[[bin]]
name = "pctx"
path = "src/bin/cli.rs"

[[bin]]
name = "generate-cli-docs"
path = "src/bin/generate-cli-docs.rs"


[dependencies]
# local crates
deno_executor = { path = "../deno_executor" }
codegen = { path = "../codegen" }
pctx_config = { path = "../pctx_config" }

# CLI
clap = { version = "4.5", features = ["derive", "env", "wrap_help"] }
url = { version = "^2.5", features = ["serde"] }
rustls = { version = "0.23", default-features = false, features = [
    "aws-lc-rs",
] }
camino = { version = "1.2.1", features = ["serde1"] }
spinoff = "0.8.0"
anstyle = "1.0.13"
inquire = "0.9.1"
tabled = { version = "0.17", features = ["ansi"] }
terminal_size = "0.4.3"
clap-markdown = "0.1.4"
ratatui = "0.29"
crossterm = "0.29"
chrono = { version = "0.4", features = ["serde"] }
notify = "8.2.0"
arboard = "3.4"
tui-markdown = "0.3"

# Logging and Telemetry
tracing = { workspace = true }
tracing-subscriber = { version = "^0.3.20", features = [
    "env-filter",
    # "fmt",
    "ansi",
    "json",
] }
env_logger = "0.11"
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31", features = [
    "grpc-tonic",
    "http-proto",
    "trace",
] }
tracing-opentelemetry = "0.32.0"

# MCP server
rmcp = { version = "0.8.0", features = [
    "server",
    "transport-streamable-http-server",
    "macros",
    "schemars",
] }
axum = { version = "0.8", features = ["macros"] }
tower = "0.5.2"
tower-http = { version = "^0.6.6", features = ["trace", "request-id"] }


# General
serde = "1.0.228"
indexmap = { version = "2.12.0", features = ["serde"] }
serde_json = "1.0.145"
tokio = { version = "1", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "io-std",
    "signal",
    "process",
] }

# Errors
anyhow = "1.0"


[target.'cfg(all(not(target_env = "msvc"), any(target_arch = "x86_64", target_arch = "aarch64", target_arch = "powerpc64")))'.dependencies]
tikv-jemallocator = "0.6.0"

# [target.'cfg(target_os = "windows")'.dependencies]
# mimalloc = "0.1.43"
# # Fix for deno_subprocess_windows missing feature
# windows-sys = { workspace = true, features = ["Win32_System_SystemInformation"] }

[dev-dependencies]
tempfile = "3.8"

[lints]
workspace = true

[package.metadata.dist]
dist = true
