[package]
name = "pctx_code_execution_runtime"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
license = "MIT"
description = "JavaScript/TypeScript execution runtime for pctx"
repository = "https://github.com/portofcontext/pctx"
keywords = ["javascript", "typescript", "runtime", "pctx"]
categories = ["development-tools"]

[lib]
path = "src/lib.rs"

[dependencies]
pctx_config = { version = "0.1", path = "../pctx_config" }
deno_core = { version = "0.372", features = ["include_icu_data"] }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
thiserror = { workspace = true }
anyhow = { workspace = true }
deno_error = "0.7"
url = { workspace = true }
rmcp = { workspace = true }
tracing = { workspace = true }

[build-dependencies]
pctx_config = { version = "0.1", path = "../pctx_config" }
deno_core = { version = "0.372", features = ["include_icu_data"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
deno_error = "0.7"
rmcp = { workspace = true }


[dev-dependencies]
rustls = { version = "0.23", features = ["ring"] }
tokio = { workspace = true, features = ["rt", "macros"] }

[lints]
workspace = true
