[package]
name = "pctx_code_mode"
version = "0.1.0"
edition = "2024"
license = "MIT"
publish = false

[dependencies]
# local
pctx_config = { path = "../pctx_config" }
codegen = { path = "../codegen" }
pctx_executor = { path = "../pctx_executor" }
pctx_code_execution_runtime = { path = "../pctx_code_execution_runtime" }

# general
thiserror = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
utoipa = { workspace = true }
tokio = { workspace = true }
futures = "0.3"
schemars = "1.1.0"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
serial_test = "3"
