[package]
name = "pctx_code_mode"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Code mode functionality for pctx AI-powered development"
repository = "https://github.com/portofcontext/pctx"
keywords = ["ai", "code-mode", "pctx", "mcp"]
categories = ["development-tools"]

[dependencies]
# local
pctx_config = { version = "^0.1.0", path = "../pctx_config" }
pctx_codegen = { version = "^0.1.0", path = "../pctx_codegen" }
pctx_executor = { version = "^0.1.0", path = "../pctx_executor" }
pctx_code_execution_runtime = { version = "^0.1.0", path = "../pctx_code_execution_runtime" }

# general
thiserror = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
utoipa = { workspace = true }
tokio = { workspace = true }
futures = "0.3"
schemars = "1.1.0"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
serial_test = "3"
