[package]
name = "pctx_code_mode"
version = "0.2.0"
edition = "2024"
license = "MIT"
description = "TypeScript code execution engine for AI agents with tool schemas, sandboxed Deno runtime, and Rust callbacks"
repository = "https://github.com/portofcontext/pctx"
readme = "README.md"
keywords = ["ai", "typescript", "code-execution", "mcp", "tools"]
categories = ["development-tools", "api-bindings"]

[dependencies]
# local
pctx_config = { version = "^0.1.1", path = "../pctx_config" }
pctx_codegen = { version = "^0.1.1", path = "../pctx_codegen" }
pctx_executor = { version = "^0.1.1", path = "../pctx_executor" }
pctx_code_execution_runtime = { version = "^0.1.1", path = "../pctx_code_execution_runtime" }

# general
thiserror = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
utoipa = { workspace = true }
tokio = { workspace = true }
futures = "0.3"
schemars = "1"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
serial_test = "3"
anyhow = "1"
