[package]
name = "pctx_codegen"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Code generation utilities for pctx"
repository = "https://github.com/portofcontext/pctx"
keywords = ["codegen", "pctx", "typescript"]
categories = ["development-tools"]

[dependencies]
biome_js_formatter = "0.3"
biome_js_parser = "0.3"
biome_js_syntax = "0.3"
biome_formatter = "0.3"
handlebars = "6"
heck = "0.5"
indexmap = { workspace = true }
regex = "1"
schemars = { version = "0.8", features = ["preserve_order"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
unicode-ident = "1"


[dev-dependencies]
insta = "1"
serde_yaml = "0.9"
pctx_type_check_runtime = { path = "../pctx_type_check_runtime" }
tokio = { workspace = true, features = ["macros", "rt"] }
