[package]
name = "pctx_config"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Configuration management for pctx toolkit"
repository = "https://github.com/portofcontext/pctx"
keywords = ["pctx", "config", "mcp"]
categories = ["development-tools"]

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.100"
indexmap = { version = "2.12.0", features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "process"] }
url = { version = "^2.5", features = ["serde"] }
keyring = { version = "3.6.1", features = [
    "apple-native",
    "windows-native",
    "linux-native",
] }
tracing = { workspace = true }
camino = { version = "1.2.1", features = ["serde1"] }
rmcp = { workspace = true, features = [
    "client",
    "transport-streamable-http-client-reqwest",
    "transport-child-process",
    "reqwest",
] }
reqwest = { version = "0.12", features = ["json"] }
thiserror.workspace = true
http = "1.3.1"
opentelemetry-otlp = { version = "0.31", features = [
    "grpc-tonic",
    "http-proto",
    "trace",
] }
base64 = "0.22.1"
tonic = "0.14.2"
opentelemetry_sdk = "0.31.0"
shlex = { workspace = true }


[build-dependencies]


[lints]
workspace = true
