[package]
name = "pctx_config"
version = "0.1.3"
edition = "2024"
license = "MIT"
description = "Configuration management for pctx toolkit"
repository = "https://github.com/portofcontext/pctx"
keywords = ["pctx", "config", "mcp"]
categories = ["development-tools"]

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
indexmap = { workspace = true, features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "process"] }
url = { workspace = true, features = ["serde"] }
keyring = { version = "3", features = [
    "apple-native",
    "windows-native",
    "linux-native",
] }
tracing = { workspace = true }
camino = { version = "1", features = ["serde1"] }
rmcp = { workspace = true, features = [
    "client",
    "transport-streamable-http-client-reqwest",
    "transport-child-process",
] }
reqwest = { workspace = true, features = [
    "rustls-tls-native-roots",
    "json",
    "cookies",
    "gzip",
    "brotli",
    "deflate",
    "zstd",
    "charset",
    "http2",
    "stream",
    "blocking",
] }
thiserror.workspace = true
http = "1"
opentelemetry-otlp = { workspace = true, features = [
    "grpc-tonic",
    "http-proto",
    "trace",
] }
base64 = "0.22"
tonic = "0.14"
opentelemetry_sdk = { workspace = true }
shlex = { workspace = true }


[build-dependencies]


[lints]
workspace = true
