[package]
name = "pctx_core"
version = "0.1.0"
edition = "2024"
license = "MIT"
publish = false

[dependencies]
# local
pctx_config = { path = "../pctx_config" }
codegen = { path = "../codegen" }
deno_executor = { path = "../deno_executor" }

# general
thiserror = { workspace = true }
tracing = { workspace = true }
serde_json = "1.0.145"
serde = "1.0.228"
schemars = "1.1.0"
