[package]
name = "pctx_core"
version = "0.1.0"
edition = "2024"
license = "MIT"
publish = false

[dependencies]
# local
pctx_config = { path = "../pctx_config" }
codegen = { path = "../codegen" }
deno_executor = { path = "../deno_executor" }
pctx_python_runtime = { path = "../pctx_python_runtime" }

# general
thiserror = { workspace = true }
tracing = { workspace = true }
serde_json = "1.0.145"
serde = "1.0.228"
schemars = "1.1.0"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serial_test = "3"
pyo3 = "0.23"
