[package]
name = "pctx_core"
version = "0.1.0"
edition = "2024"
license = "MIT"
publish = false

[dependencies]
# local
pctx_config = { path = "../pctx_config" }
codegen = { path = "../codegen" }
deno_executor = { path = "../deno_executor" }
pctx_code_execution_runtime = { path = "../pctx_code_execution_runtime" }

# general
thiserror = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
schemars = "1.1.0"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
serial_test = "3"
pyo3 = { version = "0.23", features = ["auto-initialize"] }
