[package]
name = "pctx_executor"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
license = "MIT"
description = "TypeScript execution environment orchestration"
repository = "https://github.com/portofcontext/pctx"
keywords = ["typescript", "executor", "pctx"]
categories = ["development-tools"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
deno_core = "0.372.0"
deno_runtime = { version = "0.230.0", features = ["transpile", "hmr"] }
deno_resolver = "0.53.0"
node_resolver = "0.60.0"
sys_traits = "0.1"
pctx_deno_transpiler = { version = "^0.1.0", path = "../pctx_deno_transpiler" }
pctx_code_execution_runtime = { version = "^0.1.0", path = "../pctx_code_execution_runtime" }
pctx_type_check_runtime = { version = "^0.1.0", path = "../pctx_type_check_runtime" }
pctx_config = { version = "^0.1.0", path = "../pctx_config" }
tempfile = "3.14"
regex = "1.11"
thiserror = { workspace = true }
tracing = { workspace = true }
futures = "0.3"

[target.'cfg(windows)'.dependencies]
# Need version 0.59 to match deno_subprocess_windows transitive dependency
# and ensure the feature is enabled for it as well
windows-sys = { version = "0.59", features = [
    "Win32_System_SystemInformation",
    "Win32_Networking_WinSock",
] }

[dev-dependencies]
rustls = { version = "0.23", default-features = false, features = [
    "aws-lc-rs",
] }
tokio = { workspace = true, features = ["rt", "macros"] }
serial_test = "3.0"
url = "2.5"

[lints]
workspace = true
