[package]
name = "pctx_mcp_server"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Local crates
pctx_code_mode = { path = "../pctx_code_mode" }
pctx_code_execution_runtime = { path = "../pctx_code_execution_runtime" }
pctx_config = { path = "../pctx_config" }
codegen = { path = "../codegen" }

# MCP
rmcp = { workspace = true, features = [
    "server",
    "transport-streamable-http-server",
    "macros",
    "schemars",
] }
axum = { workspace = true, features = ["macros"] }
tower = "0.5.2"
tower-http = { version = "^0.6.6", features = ["trace", "request-id"] }

# Telemetry
tracing = { workspace = true }
opentelemetry = "0.31"

# General
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "signal"] }
anyhow = "1.0"
tabled = { version = "0.17", features = ["ansi"] }
terminal_size = "0.4.3"
anstyle = "1.0.13"

[lints]
workspace = true
