[package]
name = "pctx_nodejs_sdk"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Node.js SDK bindings for PCTX - register JavaScript local tools"
keywords = ["pctx", "mcp", "nodejs", "typescript", "bindings"]
categories = ["api-bindings"]

[lib]
crate-type = ["cdylib"]

[dependencies]
pctx_code_execution_runtime = { path = "../pctx_code_execution_runtime" }
pctx_core = { path = "../pctx_core" }
pctx_config = { path = "../pctx_config" }
napi = { version = "3", features = ["napi8", "async"] }
napi-derive = "3"
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[build-dependencies]
napi-build = "2"

[lints]
workspace = true
