[package]
name = "pctx_python_runtime"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
pctx_code_execution_runtime = { path = "../pctx_code_execution_runtime" }
pyo3 = { version = "0.23", features = ["auto-initialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
serial_test = "3.2.0"

[lints]
workspace = true
