[package]
name = "pctx_session_server"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "generate-openapi"
path = "src/bin/generate-openapi.rs"

[dependencies]
# Local crates
pctx_code_mode = { path = "../pctx_code_mode" }
pctx_config = { path = "../pctx_config" }
pctx_code_execution_runtime = { path = "../pctx_code_execution_runtime" }
pctx_codegen = { path = "../pctx_codegen" }

# Web framework
axum = { workspace = true, features = ["macros", "ws"] }
tower = { workspace = true }
tower-http = { workspace = true, features = ["trace", "request-id", "cors"] }
tokio = { workspace = true, features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "signal",
] }
tokio-tungstenite = "0.28"
futures = "0.3"
utoipa = { workspace = true, features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
url = { workspace = true }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging & Telemetry
tracing = { workspace = true }
opentelemetry = { workspace = true }
tracing-opentelemetry = { workspace = true }

# Errors
anyhow = { workspace = true }
thiserror = { workspace = true }

# MCP client
rmcp = { workspace = true, features = [
    "client",
    "transport-streamable-http-client",
] }
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
http-body-util = "0.1"
tower = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
serial_test = "3"
axum-test = { version = "18", features = ["ws"] }
similar-asserts = { version = "1", features = ["serde"] }
test-log = "0.2"

[lints]
workspace = true
