[package]
name = "pctx_session_types"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
license = "MIT"
publish = false

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { version = "1.11", features = ["v4", "serde"] }
tokio = { workspace = true, features = ["sync"] }
thiserror = { workspace = true }

[lints]
workspace = true
