[package]
name = "pctx_type_check_runtime"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
license = "MIT"
description = "Isolated TypeScript type checking runtime for PCTX"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
deno_core = { version = "0.372.0", features = ["include_icu_data"] }
deno_ast = "0.52.0"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
once_cell = "1.20"
futures = "0.3"

[build-dependencies]
deno_core = { version = "0.372.0", features = ["include_icu_data"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }

[lints]
workspace = true
