[package]
name = "pctx_websocket_server"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
license = "MIT"

[dependencies]
# WebSocket
axum = { version = "0.8", features = ["ws"] }
tokio = { workspace = true, features = ["sync", "time"] }
tokio-tungstenite = "0.28.0"
futures-util = "0.3"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
pctx_code_mode = { path = "../pctx_code_mode" }
tokio-test = "0.4"
tempfile = "3.8"
